CHANGELOG
=========
+-----------------------+
| VERSION: 0.5.3        |
+-----------------------+
BUGFIXES
09-11-05    Fixed small bug where backdating date comboboxes wasn't working
            (Werner Krauss)
31-10-05	Fixed broken config calls in templates
26-10-05    Registration emails are no longer CCed to admin, separate notification
            is sent.

IMPROVEMENTS
09-11-05    Added ability to backdate articles (Werner Krauss)
09-11-05    Removed unnecessary framebuster from login page
06-11-05    Split web tests into modules
06-11-05    Moved all core classes that doubled up with other classes to reduce
            file loading to seagull/lib/SGL/Other.php.  Currently this contains
            SGL_Array, SGL_Date and SGL_Inflector.  Should make libs easier to find:
            if you don't see a file named the same as the lib you want, it will most
            likely be in Other.php
04-11-05    New wizard can only be accessed if admin knows password stored in
            seagull/var/INSTALL_COMPLETE.php.  Installer is invoked automatically
            on first seagull install, and can be called manually by calling setup.php
03-11-05    Resolved dependencies between ProfileMgr, News articles, PageMgr, 
            CategoryMgr so core modules could work
03-11-05    Added SGL_Process_ResolveManager::moduleIsRegistered() to gracefully supply
            default module if requested module is not registered.
03-11-05    all SQL-related files that used to live in seagull/etc have been moved to 
            'default' module as that's what they are, default
03-11-05    item* tables and data moved to publisher
03-11-05    category table and data moved to publisher
03-11-05    Improved timezone list
02-11-05    Global config file renamed to <host_name>.conf.php
28-10-05    Blocks can now be displayed according to the role of the current user
            (Daniel Korsak)
23-10-05	Added support for observers with SGL_Oberserver and SGL_Observable