@@ -1,4 +1,0 @@
-<Files ~ "(\.ini|etc|libs|modules|var|themes|CVS|Entries|Repositories|Root)$">
-  Order deny,allow
-  Deny from all
-</Files>
